--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.banner.image.location=Aviator_Sunglasses_PNG_Clip_Art_Image.png
 logging.level.org.springframework.web=trace
+
+spring.messages.basename=messages/messages_mt
