Enabled H2 Console and specified DB Url

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,4 +1,6 @@
 spring.banner.image.location=Aviator_Sunglasses_PNG_Clip_Art_Image.png
 logging.level.org.springframework.web=trace
+spring.h2.console.enabled=true
+spring.datasource.url=jdbc:h2:mem:pet-clinic
 
 spring.messages.basename=messages/messages_mt
