Updated Profiles for JPA service, tested active profiles. Closes #48

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+#spring.profiles.active=springDataJPA
+
 spring.banner.image.location=Aviator_Sunglasses_PNG_Clip_Art_Image.png
 logging.level.org.springframework.web=trace
 spring.h2.console.enabled=true
