Implemented Find Owner. Closes #54

--- a/pet-clinic-web/src/main/resources/application.properties
+++ b/pet-clinic-web/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.profiles.active=springDataJPA
+spring.profiles.active=springDataJPA
 
 spring.banner.image.location=Aviator_Sunglasses_PNG_Clip_Art_Image.png
 logging.level.org.springframework.web=trace
