--- a/pet-clinic-web/pom.xml
+++ b/pet-clinic-web/pom.xml
@@ -39,15 +39,15 @@
             <artifactId>spring-boot-starter-thymeleaf</artifactId>
         </dependency>
 
-<!--        <dependency>-->
-<!--            <groupId>org.projectlombok</groupId>-->
-<!--            <artifactId>lombok</artifactId>-->
-<!--            <optional>true</optional>-->
-<!--        </dependency>-->
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>2.4.4</version>
         </dependency>
 
 <!--        Webjars -->
@@ -72,7 +72,6 @@
         </dependency>
 
 <!--        End of Webjars-->
-
 
         <dependency>
             <groupId>org.springframework.boot</groupId>
